--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ h1 {
 	font-size: 3.8rem;
 	width: 100%;
 	margin: 2% 0;
+	text-shadow: 1px 1px black;
 }
 
 #main-bg{
@@ -70,6 +71,7 @@ h1 {
 	background-size: cover;
 	background-repeat: no-repeat;
 	height: 100vh;
+	box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.4);
 }
 
 
@@ -79,8 +81,8 @@ header {
 	display: flex;
 	flex-flow: row nowrap;
 	align-items: center;
-	background-color: rgba(0,0,0,0.65);
-	margin-bottom: 5%;
+	background-color: rgba(0,0,0,0.35);
+	margin-bottom: 7%;
 
 	
 	
@@ -115,13 +117,11 @@ nav a:hover{
 }
 
 main {
-	width: 90%;
-	height: 70vh;
+	width: 95%;
+	height: 60vh;
 	margin: 0 auto;
 	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	align-content: flex-start;
+	justify-content: flex-start;
 	flex-flow: column wrap;
 	text-align: center;
 	border-radius: 30px;
@@ -130,5 +130,36 @@ main {
 
 main p{
 	width: 100%;
-	font-size: 1.1rem
+	font-size: 1.1rem;
+	margin: 0 0 5% 0;
+}
+
+main .buttons{
+	margin: 0 auto;
+	display: flex;
+	flex-flow: row nowrap;
+	width: 40%;
+	justify-content: center;
+
+}
+
+main .buttons a {
+	padding: 3% 0.5%;
+	margin-right: 2%;
+	width: 35%;
+	background-color:#B43339;
+	color: white;
+	border-radius: 5px;
+	text-decoration: none;
+
+}
+
+main .buttons a:hover {
+	background-color: #953338;
+}
+
+
+#about {
+	height: 100vh;
+	background-color: aquamarine;
 }
