--- a/style.css
+++ b/style.css
@@ -91,12 +91,12 @@ header {
 header h2 {
 	font-size: 1.8rem;
 	font-weight: 700;
-	width: 25%;
+	width: 30%;
 	padding-left: 1%;
 }
 
 header nav {
-	width: 75%;
+	width: 70%;
 	display: flex;
 	justify-content: flex-end;
 	padding-right: 1%;
@@ -144,13 +144,14 @@ main .buttons{
 }
 
 main .buttons a {
-	padding: 3% 0.5%;
-	margin-right: 2%;
-	width: 35%;
+	padding: 15px;
+	margin-right: 5%;
 	background-color:#B43339;
 	color: white;
 	border-radius: 5px;
 	text-decoration: none;
+	font-size: 1.4rem;
+	width: 125px;
 
 }
 
@@ -162,4 +163,71 @@ main .buttons a:hover {
 #about {
 	height: 100vh;
 	background-color: aquamarine;
+}
+
+@media (max-width: 750px) {
+
+	h1 {
+		font-size: 2.5rem
+	}
+
+	main .buttons {
+		width: 100%;
+	}
+}
+
+
+/* @media (max-width: 500px) {
+
+
+
+	header h2 {
+		font-size: 1.3rem;
+	}
+
+	header nav {
+		font-size: 1.2rem;
+	}
+
+	main p {
+		font-size: 1.1rem;
+	}
+
+	main .buttons {
+		width: 100%;
+	}
+
+} */
+
+
+@media (max-width: 500px) {
+
+	h1 {
+		font-size: 2.3rem;
+	}
+	main p {
+		font-size: 1rem;
+	}
+
+header {
+	display: flex;
+	flex-flow: column nowrap;
+	width: 100%;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+}
+
+header h2 {
+	width: 100%;
+	padding: 0;
+	font-size: 1.9rem;
+	margin-bottom: 5%;
+}
+
+header nav {
+	width: 100%;
+	justify-content: center;
+}
+
 }
