adjusted about page styles

--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ main .buttons a:hover {
 #about-img{
 	width: 100%;
 	background: url("./img/about-main.jpeg") no-repeat center;
-	height: 65vh;
+	height: 75vh;
 	background-size: cover;
 	margin: 0 0 2% 0;
 
@@ -209,13 +209,14 @@ main .buttons a:hover {
 
 footer {
 	width: 100%;
-	height: 9vh;
-	margin: 0.5% auto;
+	height: 9vh;	
 	font-size: 1.2rem;
 	text-align: center;
 	display: flex;
+	flex-flow: column wrap;
 	align-items: center;
 	background-color: #3C3C3C;
+	justify-content: center;
 
 }
 
@@ -223,7 +224,6 @@ footer nav {
 	width: 100%;
 	display: flex;
 	flex-flow: row nowrap;
-
 	justify-content: center;
 	
 }
@@ -232,10 +232,45 @@ footer nav a {
 	margin-right: 5%;
 }
 
+footer span {
+	font-size: 0.8rem;	
+}
+
 @media (max-width: 800px) {
 
-	h1 {
+	h1 {	
 		font-size: 2.5rem
+	}
+
+	header {
+		display: flex;
+		flex-flow: column nowrap;
+		width: 100%;
+		align-items: center;
+		justify-content: center;
+		text-align: center;
+	}
+	
+	header h2 {
+		width: 100%;
+		padding: 0;
+		font-size: 1.9rem;
+		margin-bottom: 5%;
+	}
+	
+	header nav {
+		width: 100%;
+		justify-content: center;
+	}
+	
+	#about-header {
+		display: flex;
+		flex-flow: column nowrap;
+		width: 100%;
+		align-items: center;
+		justify-content: center;
+		text-align: center;
+	
 	}
 
 	#about-img {
@@ -253,6 +288,12 @@ footer nav a {
 		margin: 2% 1% 1% 0;
 		text-align: center;
 	}
+
+	.product-info {
+		width: 100%;
+		margin: 12% 1% 1% 0;
+		text-align: center;
+	}
 }
 
 
@@ -265,41 +306,4 @@ footer nav a {
 		font-size: 1rem;
 	}
 
-header {
-	display: flex;
-	flex-flow: column nowrap;
-	width: 100%;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-}
-
-header h2 {
-	width: 100%;
-	padding: 0;
-	font-size: 1.9rem;
-	margin-bottom: 5%;
-}
-
-header nav {
-	width: 100%;
-	justify-content: center;
-}
-
-#about-header {
-	display: flex;
-	flex-flow: column nowrap;
-	width: 100%;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-
-}
-
-
-.product-info {
-	width: 100%;
-	margin: 12% 1% 1% 0;
-	text-align: center;
-}
 }
