--- a/style.css
+++ b/style.css
@@ -83,11 +83,6 @@ h1 {
 }
 
 #about-header {
-	width: 100%;
-	height: 12vh;
-	display: flex;
-	flex-flow: row nowrap;
-	align-items: center;
 	background: none;
 }
 
@@ -137,7 +132,7 @@ nav a:hover{
 	margin: 7% auto;
 	display: flex;
 	justify-content: center;
-	flex-flow: column wrap;
+	flex-flow: row wrap;
 	text-align: center;
 	border-radius: 30px;
 	background-color: rgba(0,0,0,0.35);
@@ -150,7 +145,6 @@ main p{
 }
 
 main .buttons{
-	margin: 0 auto;
 	display: flex;
 	flex-flow: row nowrap;
 	width: 40%;
@@ -160,13 +154,15 @@ main .buttons{
 
 main .buttons a {
 	padding: 15px;
+	height: 55px;
+	width: 125px;
 	margin-right: 5%;
 	background-color:#B43339;
 	color: white;
 	border-radius: 5px;
 	text-decoration: none;
 	font-size: 1.4rem;
-	width: 125px;
+	
 
 }
 
@@ -179,6 +175,7 @@ main .buttons a:hover {
 	margin: 0 auto;
 	display: flex;
 	flex-flow: row wrap;
+	height: 
 }
 
 #about-main h2 {
@@ -234,6 +231,45 @@ footer nav a {
 
 footer span {
 	font-size: 0.8rem;	
+}
+
+#contact-footer {
+	background-color: #222222;
+}
+
+#contact-main {
+
+	width: 100%;
+	background-color: #953338;
+	padding: 2% 0;
+	display: flex;
+	flex-flow: row wrap;
+}
+
+#contact-main h1 {
+	width: 100%;
+	text-align: center;
+	margin: 3% 0;
+}
+
+.team-info {
+	display: flex;
+	flex-flow: column wrap;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	width: 50%;
+	margin: 3% 0%;
+
+}
+
+.team-info h2 {
+	font-size: 2.2rem;
+	margin: 2% 0;
+}
+
+.team-info img {
+	border-radius: 100px;
 }
 
 @media (max-width: 800px) {
@@ -293,6 +329,15 @@ footer span {
 		width: 100%;
 		margin: 12% 1% 1% 0;
 		text-align: center;
+	}
+
+	.team-info {
+
+		flex-flow: column wrap;
+
+		width: 100%;
+		margin: 3% 3%;
+	
 	}
 }
 
