--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ h1 {
 	font-size: 3.8rem;
 	width: 100%;
 	margin: 2% 0;
-	text-shadow: 1px 1px black;
 }
 
 #main-bg{
@@ -258,7 +257,7 @@ footer span {
 	align-items: center;
 	justify-content: center;
 	text-align: center;
-	width: 50%;
+	width: 33%;
 	margin: 3% 0%;
 
 }
@@ -269,7 +268,12 @@ footer span {
 }
 
 .team-info img {
-	border-radius: 100px;
+	height: 250px;
+	border-radius: 125px;
+}
+
+.team-info a {
+	color: white;
 }
 
 @media (max-width: 800px) {
