--- a/spotify-app/src/App.css
+++ b/spotify-app/src/App.css
@@ -2,10 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.body{
+  padding-top: 5%;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -27,14 +27,20 @@
   color: rgb(112, 76, 182);
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px)
-  }
-  100% {
-    transform: translateY(0px)
-  }
+
+nav{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+
+}
+
+.link{
+  margin: 2%;
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
