--- a/spotify-app/src/App.css
+++ b/spotify-app/src/App.css
@@ -4,6 +4,8 @@
 
 .body{
   padding-top: 5%;
+  display: flex;
+  justify-content: center;
 }
 
 
@@ -39,8 +41,13 @@ nav{
   margin: 2%;
 }
 
-form{
+.form-container{
+  justify-content: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+
+.row{
+  width: 80%;
+  justify-content: center;
+  display: flex;
 }
