--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ main .buttons a:hover {
 	color: white;
 	width: 100%;
 	margin-bottom: 2%;
+	text-align: center;
 }
 
 #about-img{
@@ -225,11 +226,8 @@ footer nav {
 }
 
 footer nav a {
-	margin-right: 5%;
-}
-
-footer span {
-	font-size: 0.8rem;	
+	padding: 0 10%;
+	width: auto;
 }
 
 #contact-footer {
@@ -275,12 +273,45 @@ footer span {
 .team-info img {
 	height: 250px;
 	border-radius: 125px;
+	box-shadow: 3px 3px 3px 2px #888888;
 }
 
 .team-info a {
 	color: black;
 }
 
+#more-info {
+	width: 100%;
+	display: flex;
+	flex-flow: column nowrap;
+	background-color: #953338;
+	color: white;
+	justify-content: center;
+	align-items: center;
+}
+
+#more-info h2 {
+	margin: 2% 0;
+	font-size: 2.1rem;
+}
+
+.additional {
+	width: 50%;
+	margin: 3% 0;
+	text-align: center;
+}
+
+.additional h3 {
+
+	font-size: 1.6rem;
+	margin: 2% 0;
+	text-align: center;
+
+}
+
+.additional p{
+	font-size: 1.1rem;
+}
 @media (max-width: 990px) {
 	.team-info {
 
@@ -357,6 +388,12 @@ footer span {
 		margin: 3% 3%;
 	}
 
+	.additional h3 {
+
+		margin: 5% 0;
+
+	
+	}
 
 }
 
