--- a/spotify-app/src/App.css
+++ b/spotify-app/src/App.css
@@ -17,7 +17,7 @@
 
 .App-header {
   height: 20vh;
-  background-color: green;
+  background-color: #880e4f;
   display: flex;
   flex-direction: column;
   align-items: center;
