--- a/spotify-app/src/App.css
+++ b/spotify-app/src/App.css
@@ -51,3 +51,60 @@ nav{
   justify-content: center;
   display: flex;
 }
+
+.container.form-container{
+  margin-top: 5%;
+  width: 80%;
+  border: 1px solid lightblue;
+  border-radius: 20px;
+}
+
+.profile-page{
+  width:100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h3{
+  text-decoration: underline;
+}
+
+.favorites{
+  width: 30%;
+  border: 1px solid grey;
+}
+
+li{
+  padding: 2%;
+  margin: 3%;
+  font-style: italic;
+}
+
+.profile-container{
+  border: 1px solid lightblue;
+  width: 50%;
+  border-radius: 20px;
+  display: flex;
+}
+
+.profile-pic-container{
+  display: flex;
+  width: 20%;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.profile-pic{
+  max-width: 100%;
+  object-fit: contain;
+}
+
+.info{
+  width:70%;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-left: 3%;
+}
